<resources>
    <string name="app_name">Solar Calculator</string>
    <string name="welcome_to_solar_calculator">Solar Calculator</string>
    <string name="tag_line">Easy. Fast. Eco-Friendly</string>
    <string name="how_long_access">How long do you have access to sunlight?</string>


    //BottomSheet Calcution layout strings
    <string name="dismiss_btn_text">Dismiss</string>
    <string name="selene_solar_calculator">Selene Solar Calculator</string>
    <string name="total_watthour_of_appliances">Total WattHour of Appliances</string>
    <string name="recommended_solar_panel_power">Recommended Solar Panel Power</string>
    <string name="recommended_battery_capaity">Recommended Battery Capaity</string>
    <string name="please_calculate">Please Calculate</string>
    <string name="clear_all">Clear All</string>

    //Strings for login and register
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register_btn_text">Register</string>
    <string name="register_account_login_here">Already have an account? Login</string>
    <string name="login_btn_text">Login</string>
    <string name="login_account_register_here">Don\'t have an account? Register here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="welcome_you_re_logged_in">Welcome! You\'re Logged In</string>
    <string name="your_solar_cal_text">Your Solar Calculations</string>
    <string name="use_green_icon_text">New item added, you can use the green icon to see calculations</string>

    //Google server ID
    <string name="server_client_id">917856944725-2s4js663b44elc92e1aof2n8suf0r7hp.apps.googleusercontent.com</string>
<!--    <string name="about_the_team">About the Team</string>-->
    <string name="about_the_team">About the Team</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome</string>

    <string name="first_notif_line">1. Device name is simply the name of your device.</string>
    <string name="second_notif_line">2. Device volts and amphere are the units used to measure the amount of electromotive force and current that can power your device respectively; both the volts and amps can be seen below or beside the stamp of your device.</string>
    <string name="tips">TIPS!</string>
</resources>
