<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/girl_phone"
        android:scaleType="centerCrop"
        android:alpha="0.6"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            app:srcCompat="@drawable/sun" />
        <TextView
            android:id="@+id/addfile_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/addfile_logo"
            android:fontFamily="@font/oensansbold"
            android:text="Register"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_activity_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_person_pin_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_activity_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_people_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_activity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_activity_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:backgroundTint="@android:color/white"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registration_activity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/register_btn_text"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/registration_activity_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="32dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_account_login_here"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/registration_activity_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>