<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/girl_phone"
        android:scaleType="centerCrop"
        android:alpha="0.6"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/sun"
        android:layout_margin="48dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_email_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_activity_password_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="16dp"
            android:maxLength="20"
            android:textSize="16sp"
            android:background="@drawable/button_background"
            android:backgroundTint="@android:color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:text="@string/login_btn_text"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/login_activity_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="32dp"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:text="@string/login_account_register_here" />

    <ProgressBar
        android:id="@+id/login_activity_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.ProgressBar"
        android:visibility="invisible" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>